...
          }}
          render={({ field: { onChange, value } }) => (
            <Input
              size="lg"
              icon="lock"
              label="New password"
              placeholder="At least 8 characters"
              secureTextEntry
              autoCapitalize="none"
              value={value}
              onChangeText={onChange}
              error={errors.password?.message}
            />
...
